package entities;

public class Retangulo {

    public double largura;
    public double comprimento;

    public double calcularArea() {
        return largura * comprimento;
    }
}
